tests/NormalTests/paczka1/small_fuzzy/29429748.err
Error in line 5: IkhfM99Hc4 S689 38,0
Error in line 4: jbgMmykwOp1 S765 54,1
